--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.13.5",
+    "bootstrap": "^5.3.8",
+    "mongoose": "^9.2.3",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-data-table-component": "^7.7.0",
+    "react-dom": "19.2.3",
+    "react-toastify": "^11.0.5"
   }
 }
